--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@netlify/edge-functions": "^2.2.0",
     "@supabase/supabase-js": "^2.39.1",
     "@tanstack/react-query": "^5.14.6",
     "@types/react-transition-group": "^4.4.10",
